Use String.formatted()